# mc-server-manager-rust

./: .$work_diagramm.drawio.bkp  .gitignore  COMPILING.md  Cargo.toml  README.md  TODO.md  app.cfg  example.json  work_diagramm.drawio
data/: fml_versions.toml  neofml_versions.toml  server.properties
src/: main.rs
src/backend/: main.rs
src/cli/: main.rs
src/daemon/: main.rs
src/install/: main.rs
src/lib/: lib.rs
src/old/: main.rs
src/update/: main.rs
