[package]
name = "mc_server_panel"
version = "0.0.8"
edition = "2024"
readme = "README.md"
homepage = "https://github.com/Delfi-CH/mc-server-manager-rust"
repository = "https://github.com/Delfi-CH/mc-server-manager-rust"
license = "GPL-3.0-or-later"
keywords = ["minecraft", "minecraft server", "selfhosted", "commandline"]


[dependencies]
once_cell = "1.18"
dir = "0.1.2"
open = "5.3.2"
os_info = "3.11.0"
toml = "0.8.23"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.174"
serde_json = "1.0.140"
indexmap = { version = "2.10.0", features = ["serde"] }
props-rs = "0.1.1"
chrono = "0.4.41"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_System_SystemInformation"] }
winver = "1.0.0"

[[bin]]
name = "cli-old"
path = "src/old/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "webapp-backend"
path = "src/backend/main.rs"

[[bin]]
name = "daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "install"
path = "src/install/main.rs"

[[bin]]
name = "updater"
path = "src/update/main.rs"

[lib]
name = "app_lib"
path = "src/lib/lib.rs"
